--- a/stack.yaml
+++ b/stack.yaml
@@ -2,3 +2,11 @@ resolver: nightly-2018-07-28
 packages:
 - smos-data
 - smos-data-gen
+- smos-cursor
+- smos-cursor-gen
+extra-deps:
+- git: git@github.com:NorfairKing/cursor.git
+  commit: 0dfc8eecb682fd6a8c8e0e56cb203c6ee805f3bf
+  subdirs:
+    - cursor
+    - cursor-gen
