Got the tests to pass by adding a logbook

--- a/smos-cursor/package.yaml
+++ b/smos-cursor/package.yaml
@@ -16,6 +16,7 @@ library:
   - Smos.Cursor.Contents
   - Smos.Cursor.Entry
   - Smos.Cursor.Header
+  - Smos.Cursor.Logbook
   - Smos.Cursor.Properties
   - Smos.Cursor.StateHistory
   - Smos.Cursor.Tags
