--- a/smos-cursor-gen/smos-cursor-gen.cabal
+++ b/smos-cursor-gen/smos-cursor-gen.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a595926d4584334061f8eae624381868d73f8faed5585fbc37447be9616d1e62
+-- hash: 457395fc7bd74b00c458dacb83a8a585c4e4dad66d981273abd5a6f798a99bc5
 
 name:           smos-cursor-gen
 version:        0.0.0.0
@@ -27,6 +27,7 @@ library
       Smos.Cursor.Contents.Gen
       Smos.Cursor.Entry.Gen
       Smos.Cursor.Header.Gen
+      Smos.Cursor.Logbook.Gen
       Smos.Cursor.Properties.Gen
       Smos.Cursor.StateHistory.Gen
       Smos.Cursor.Tags.Gen
@@ -53,6 +54,7 @@ test-suite smos-cursor-test
       Smos.Cursor.ContentsSpec
       Smos.Cursor.EntrySpec
       Smos.Cursor.HeaderSpec
+      Smos.Cursor.LogbookSpec
       Smos.Cursor.PropertiesSpec
       Smos.Cursor.StateHistorySpec
       Smos.Cursor.TagsSpec
