Refactor actions and cursor

--- a/smos-cursor/package.yaml
+++ b/smos-cursor/package.yaml
@@ -2,7 +2,7 @@ name:                smos-cursor
 version:             0.0.0.0
 github:              "NorfairKing/smos"
 author:              "Tom Sydney Kerckhove"
-maintainer:          "sydcs-syd.eu"
+maintainer:          "syd@cs-syd.eu"
 copyright:           "Copyright: (c) 2018 Tom Sydney Kerckhove"
 
 extra-source-files:
@@ -14,6 +14,7 @@ library:
   source-dirs: src
   exposed-modules:
   - Smos.Cursor.Contents
+  - Smos.Cursor.Editor
   - Smos.Cursor.Entry
   - Smos.Cursor.Header
   - Smos.Cursor.Logbook
