--- a/stack.yaml
+++ b/stack.yaml
@@ -5,12 +5,14 @@ packages:
 - smos-data-gen
 - smos-cursor
 - smos-cursor-gen
+- /home/syd/cs-syd/code/open-source/cursor/cursor
+- /home/syd/cs-syd/code/open-source/cursor/cursor-gen
 extra-deps:
-- git: https://github.com/NorfairKing/cursor.git
-  commit: adbbcdafdae430f0cd7412be0b614b09d749f805
-  subdirs:
-    - cursor
-    - cursor-gen
+  # - git: https://github.com/NorfairKing/cursor.git
+  #   commit: adbbcdafdae430f0cd7412be0b614b09d749f805
+  #   subdirs:
+  #     - cursor
+  #     - cursor-gen
 - git: https://github.com/NorfairKing/validity.git
   commit: cdb0ab0a23d88e8d7256e17cc3bc1f6da7fa0588
   subdirs:
