Setting todo states

--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -93,6 +93,7 @@ tests:
     - QuickCheck
     - base
     - brick
+    - bytestring
     - cursor
     - cursor-gen
     - genvalidity
@@ -110,3 +111,5 @@ tests:
     - smos-data
     - smos-data-gen
     - text
+    - time
+    - yaml
