--- a/smos-data-gen/package.yaml
+++ b/smos-data-gen/package.yaml
@@ -15,6 +15,7 @@ library:
   - Smos.Data.Gen
   dependencies:
   - base >=4.9 && <=5
+  - containers
   - QuickCheck
   - genvalidity
   - genvalidity-containers
@@ -38,5 +39,7 @@ tests:
     - genvalidity-hspec
     - genvalidity-hspec-aeson
     - hspec
+    - pretty-show
     - smos-data
     - smos-data-gen
+    - text
