--- a/smos-data-gen/package.yaml
+++ b/smos-data-gen/package.yaml
@@ -36,6 +36,7 @@ tests:
     - -Wall
     dependencies:
     - base
+    - bytestring
     - genvalidity-hspec
     - genvalidity-hspec-aeson
     - hspec
