Deleting contents when they are already empty and the users tries to delete a character

--- a/smos-cursor-gen/package.yaml
+++ b/smos-cursor-gen/package.yaml
@@ -35,10 +35,11 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - hspec
-    - smos-data
-    - smos-data-gen
-    - smos-cursor
-    - smos-cursor-gen
+    - cursor
     - genvalidity-hspec
     - genvalidity-hspec-optics
+    - hspec
+    - smos-cursor
+    - smos-cursor-gen
+    - smos-data
+    - smos-data-gen
