--- a/stack.yaml
+++ b/stack.yaml
@@ -6,22 +6,26 @@ packages:
 - smos-cursor
 - smos-cursor-gen
 - smos-report
+- /home/syd/cs-syd/code/open-source/cursor-fuzzy-time/cursor-fuzzy-time-gen
+- /home/syd/cs-syd/code/open-source/cursor-fuzzy-time/cursor-fuzzy-time
+- /home/syd/cs-syd/code/open-source/cursor/cursor-gen
+- /home/syd/cs-syd/code/open-source/cursor/cursor
 extra-deps:
-- git: https://github.com/NorfairKing/cursor-fuzzy-time.git
-  commit: cf74eb27fb785a3c0bc69234f6d248937fa65df1
-  subdirs:
-    - cursor-fuzzy-time
-    - cursor-fuzzy-time-gen
+  # - git: https://github.com/NorfairKing/cursor-fuzzy-time.git
+  #   commit: cf74eb27fb785a3c0bc69234f6d248937fa65df1
+  #   subdirs:
+  #     - cursor-fuzzy-time
+  #     - cursor-fuzzy-time-gen
 - git: https://github.com/NorfairKing/fuzzy-time.git
   commit: 765afdf9a18566007f26499398a04f3fac6435cd
   subdirs:
     - fuzzy-time
     - fuzzy-time-gen
-- git: https://github.com/NorfairKing/cursor.git
-  commit: 5ca82015227043a5fb6110082701b11c926fc0ce
-  subdirs:
-    - cursor
-    - cursor-gen
+  # - git: https://github.com/NorfairKing/cursor.git
+  #   commit: 5ca82015227043a5fb6110082701b11c926fc0ce
+  #   subdirs:
+  #     - cursor
+  #     - cursor-gen
 - git: https://github.com/NorfairKing/validity.git
   commit: b9449de1466abc7c862b7e54b9bb18d6e4a02c81
   subdirs:
