--- a/smos-cursor-gen/package.yaml
+++ b/smos-cursor-gen/package.yaml
@@ -30,20 +30,22 @@ library:
 
 tests:
   smos-cursor-test:
-    main:                Spec.hs
+    main:                Main.hs
     source-dirs:         test
     ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
+    - QuickCheck
     - cursor
+    - cursor-fuzzy-time
+    - cursor-fuzzy-time-gen
     - genvalidity-hspec
     - genvalidity-hspec-optics
     - hspec
+    - hspec-core
     - smos-cursor
     - smos-cursor-gen
     - smos-data
     - smos-data-gen
-    - cursor-fuzzy-time
-    - cursor-fuzzy-time-gen
