very rudimentary clock table

--- a/smos-report/package.yaml
+++ b/smos-report/package.yaml
@@ -13,12 +13,14 @@ library:
   dependencies:
   - base
   - boxes
+  - conduit
   - configurator
   - containers
   - filepath
   - optparse-applicative
   - path
   - path-io
+  - pretty-show
   - smos-data
   - text
   - time
