First draft of a converter from org mode

--- a/smos-convert-org/package.yaml
+++ b/smos-convert-org/package.yaml
@@ -11,16 +11,20 @@ library:
   source-dirs: src/
   ghc-options: -Wall
   dependencies:
+  - attoparsec
   - base
+  - bytestring
   - containers
   - filepath
   - optparse-applicative
+  - orgmode-parse
   - path
   - path-io
   - pretty-show
   - smos-data
   - text
   - time
+  - unordered-containers
   - validity
   - validity-path
 
