--- a/stack.yaml
+++ b/stack.yaml
@@ -7,6 +7,7 @@ packages:
 - smos-cursor-gen
 - smos-report
 - smos-report-gen
+- smos-query
 - smos-convert-org
 extra-deps:
 - git: https://github.com/ixmatus/orgmode-parse
