Forest cursor based next action report

--- a/smos-report-cursor/package.yaml
+++ b/smos-report-cursor/package.yaml
@@ -17,9 +17,11 @@ library:
   - containers
   - cursor
   - filepath
+  - microlens
   - path
   - path-io
   - pretty-show
+  - smos-cursor
   - smos-data
   - smos-report
   - text
