fixed the build

--- a/stack.yaml
+++ b/stack.yaml
@@ -8,6 +8,7 @@ packages:
 - smos-report
 - smos-report-gen
 - smos-report-cursor
+- smos-report-cursor-gen
 - smos-query
 - smos-convert-org
 extra-deps:
