--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -86,6 +86,8 @@ tests:
     - smos-cursor-gen
     - smos-data
     - smos-data-gen
+    - smos-report-cursor
+    - smos-report-cursor-gen
     - text
     - vty
 
