--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -57,7 +57,7 @@ executables:
 
 tests:
   smos-test:
-    main: Spec.hs
+    main: Main.hs
     source-dirs: test/
     ghc-options:
     - -threaded
