--- a/stack.yaml
+++ b/stack.yaml
@@ -11,6 +11,7 @@ packages:
 - smos-report-cursor-gen
 - smos-query
 - smos-convert-org
+- smos-archive
 extra-deps:
 - git: https://github.com/ixmatus/orgmode-parse
   commit: 1bdfbfe8fb7299724a6f6a122a93b2e96dd839f8
