--- a/smos/test_resources/todo-single.yaml
+++ b/smos/test_resources/todo-single.yaml
@@ -1,3 +1,10 @@
+before:
+- example
+commands:
+- entrySetTodoState_TODO
+- entryUnsetTodoState
+- entryToggleTodoState_DONE
+after:
 - header: example
   state-history:
   - timestamp: 2018-09-05T06:13:41.359194627Z
