--- a/smos-report/package.yaml
+++ b/smos-report/package.yaml
@@ -11,14 +11,17 @@ library:
   source-dirs: src/
   ghc-options: -Wall
   dependencies:
+  - aeson
   - base
   - bytestring
   - conduit
   - containers
   - cursor
+  - dhall
   - filepath
   - megaparsec
   - microlens
+  - optparse-applicative
   - path
   - path-io
   - pretty-show
@@ -27,3 +30,4 @@ library:
   - time
   - validity
   - validity-path
+  - yaml
