--- a/smos/test_resources/config/yaml/reset.yaml
+++ b/smos/test_resources/config/yaml/reset.yaml
@@ -1,4 +1,27 @@
 reset: true
 keys:
   help:
-    catch-all: null
+    - key: Up
+      action: helpUp
+    - key: Down
+      action: helpDown
+    - key: Home
+      action: helpStart
+    - key: End
+      action: helpEnd
+    - key: Escape
+      action: selectEditor
+    - key: k
+      action: helpUp
+    - key: j
+      action: helpDown
+    - key: gg
+      action: helpStart
+    - key: G
+      action: helpEnd
+    - key: q
+      action: selectEditor
+  file:
+    entry: []
+  reports:
+    next-action: []
