Fixed the clock filtering

--- a/smos-report-gen/package.yaml
+++ b/smos-report-gen/package.yaml
@@ -33,6 +33,7 @@ tests:
     dependencies:
     - QuickCheck
     - base
+    - genvalidity-containers
     - genvalidity-hspec
     - genvalidity-path
     - hspec
