nicer clock yaml

--- a/smos-report-gen/package.yaml
+++ b/smos-report-gen/package.yaml
@@ -35,6 +35,7 @@ tests:
     - base
     - genvalidity-containers
     - genvalidity-hspec
+    - genvalidity-hspec-aeson
     - genvalidity-path
     - hspec
     - megaparsec
