--- a/smos-report-gen/package.yaml
+++ b/smos-report-gen/package.yaml
@@ -15,6 +15,7 @@ library:
   - QuickCheck
   - base >=4.9 && <=5
   - genvalidity
+  - genvalidity-time
   - genvalidity-path
   - smos-data
   - smos-data-gen
