--- a/smos-report-gen/package.yaml
+++ b/smos-report-gen/package.yaml
@@ -34,6 +34,7 @@ tests:
     dependencies:
     - QuickCheck
     - base
+    - containers
     - cursor
     - cursor-gen
     - genvalidity-containers
