--- a/smos/package.yaml
+++ b/smos/package.yaml
@@ -86,6 +86,7 @@ tests:
     - genvalidity-time
     - genvalidity-unordered-containers
     - hspec
+    - megaparsec
     - path
     - path-io
     - pretty-show
@@ -95,9 +96,9 @@ tests:
     - smos-data
     - smos-data-gen
     - smos-report
-    - smos-report-gen
     - smos-report-cursor
     - smos-report-cursor-gen
+    - smos-report-gen
     - text
     - time
     - validity
